이미지 CSS작업
백그라운드 이미지작업

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>밥먹고 열심히 일허자  kookoo9.github.io</title>
+    <title>이미지테스트</title>
+    <style>
+     /*CSS Code*/
+     body {
+         height: 100vh;
+         background-image: url("./Assets/hello-vasilyev.jpg");
+         background-repeat: no-repeat;
+         background-position: center center;
+         background-size: cover;
+     }
+    </style>
 </head>
 <body>
-     <!--heading 1 ~ 6-->
-     <h1>쇼케이스</h1>
-     <h2 lang="en">showcase</h2>
-     <!--단락: paragraph-->
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt optio maxime, alias fuga assumenda ipsa ipsum magnam distinctio, sunt magni, animi excepturi nulla sed facilis amet odio dolore nostrum. Consequatur. </p>
+    <!--<img src="./ASSETS/hello-vasilyev.jpg" alt="hello">-->
 </body>
 </html>
