잘못된 이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      /*CSS Code*/
      body {
          height: 100vh;
-         background-image: url("./Assets/hello-vasilyev.jpg");
+         background-image: url("./assets/hello-vasilyev.jpg");
          background-repeat: no-repeat;
          background-position: center center;
          background-size: cover;
