다이포그래피 완성본

--- a/DAY4/typography.html
+++ b/DAY4/typography.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>본문/제목:웹 타이포그래피</title>
-    <link href="http://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel="stylesheet" type="text/css">
+    <link href="http://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel="stylesheet>
     <link rel="stylesheet" href="./css/typography.css">
 </head>
 <body>
